Commit pré Merge

--- a/MercadOn/MercadOn/Views/Login/Login.cshtml
+++ b/MercadOn/MercadOn/Views/Login/Login.cshtml
@@ -36,6 +36,11 @@
 
     <div class="limiter">
         <div class="container-login100">
+            
+            <div class="col-md-4 text-center">
+                <span urlimage="C:\Users\Aluno\Documents\GitHub\ProjetoIntegrador1\MercadOn\MercadOn\Content\StyleLogin\images\lOGO.png"></span>
+                
+            </div>
             <div class="wrap-login100">
                 <form class="login100-form validate-form">
                     <span class="login100-form-title p-b-43">
