--- a/MercadOn/MercadOn/Views/Home/QuemSomos.cshtml
+++ b/MercadOn/MercadOn/Views/Home/QuemSomos.cshtml
@@ -1,11 +1,12 @@
 ﻿
 @{
-    //Layout = null;
+    Layout = "~/Views/Shared/_LayoutSite.cshtml";
 }
 
 <!DOCTYPE html>
 
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.MeuBago</title>
