--- a/MercadOn/MercadOn/Views/Login/Login.cshtml
+++ b/MercadOn/MercadOn/Views/Login/Login.cshtml
@@ -1,12 +1,14 @@
 ﻿@model MercadOn.Models.Login.LoginModel
 @{Layout = null;
-    
+
 }
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>MercadON</title>
     <meta charset="UTF-8">
+
+    <script src="~/Content/StyleLogin/vendor/jquery/jquery-3.2.1.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--===============================================================================================-->
     <link rel="icon" type="image/png" href="~/Content/StyleLogin/images/icons/favicon.ico" />
@@ -29,6 +31,8 @@
     <!--===============================================================================================-->
     <link rel="stylesheet" type="text/css" href="~/Content/StyleLogin/css/util.css">
     <link rel="stylesheet" type="text/css" href="~/Content/StyleLogin/css/main.css">
+    <link rel="stylesheet" href="~/Content/alertify/css/alertify.css">
+    <link rel="stylesheet" href="~/Content/alertify/css/themes/default.css">
     <!--===============================================================================================-->
 </head>
 <body style="background-color: #666666;">
@@ -36,74 +40,75 @@
 
     <div class="limiter">
         <div class="container-login100">
-            
-            <div class="wrap-login100"> 
-                
-                <form class="login100-form validate-form" >
-                    <div id="logo-login"  >
+
+            <div class="wrap-login100">
+                @using (@Html.BeginForm("Login", "Login", FormMethod.Post, new { @class= "login100-form validate-form" }))
+                {
+                    <form class="login100-form validate-form">
+                        <div id="logo-login">
+                            <span class="login100-form-title p-b-43">
+                                <img src="~/Content/StyleLogin/images/logo-login.png" />
+                            </span>
+                        </div>
+
                         <span class="login100-form-title p-b-43">
-                            <img src="~/Content/StyleLogin/images/logo-login.png" />
+                            Faça login para continuar
                         </span>
-                    </div>
-
-                    <span class="login100-form-title p-b-43">
-                        Faça login para continuar
-                    </span>
 
 
-                    <div class="wrap-input100 validate-input" data-validate="Um email válido é necessário ex@abc.xyz">
-                        @Html.TextBoxFor(x => x.Email, new { @class = "input100" })
-                        <span class="focus-input100"></span>
-                        <span class="label-input100">Email</span>
-                    </div>
-
-
-                    <div class="wrap-input100 validate-input" data-validate="Uma senha é necessária">
-                        @Html.PasswordFor(x => x.Senha, new { @class = "input100" })
-                        <span class="focus-input100"></span>
-                        <span class="label-input100">Senha</span>
-                    </div>
-
-                    <div class="flex-sb-m w-full p-t-3 p-b-32">
-                        <div class="contact100-form-checkbox">
-                            <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
-                            <label class="label-checkbox100" for="ckb1">
-                                Me lembrar neste dispositivo
-                            </label>
+                        <div class="wrap-input100 validate-input" data-validate="Um email válido é necessário ex@abc.xyz">
+                            @Html.TextBoxFor(x => x.Email, new { @class = "input100" })
+                            <span class="focus-input100"></span>
+                            <span class="label-input100">Email</span>
                         </div>
 
-                        <div>
-                            <a href="#" class="txt1">
-                                Esqueceu sua senha?
+
+                        <div class="wrap-input100 validate-input" data-validate="Uma senha é necessária">
+                            @Html.PasswordFor(x => x.Senha, new { @class = "input100" })
+                            <span class="focus-input100"></span>
+                            <span class="label-input100">Senha</span>
+                        </div>
+
+                        <div class="flex-sb-m w-full p-t-3 p-b-32">
+                            <div class="contact100-form-checkbox">
+                                <input class="input-checkbox100" id="ckb1" type="checkbox" name="remember-me">
+                                <label class="label-checkbox100" for="ckb1">
+                                    Me lembrar neste dispositivo
+                                </label>
+                            </div>
+
+                            <div>
+                                <a href="#" class="txt1">
+                                    Esqueceu sua senha?
+                                </a>
+                            </div>
+                        </div>
+
+
+                        <div class="container-login100-form-btn">
+                            <button class="login100-form-btn">
+                                Login
+                            </button>
+                        </div>
+
+                        <div class="text-center p-t-46 p-b-20">
+                            <span class="txt2">
+                                Ou faça login usando Facebook
+                            </span>
+                        </div>
+
+                        <div class="login100-form-social flex-c-m">
+                            <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
+                                <i class="fa fa-facebook-f" aria-hidden="true"></i>
                             </a>
+
                         </div>
-                    </div>
-
-
-                    <div class="container-login100-form-btn">
-                        <button class="login100-form-btn">
-                            Login
-                        </button>
-                    </div>
-
-                    <div class="text-center p-t-46 p-b-20">
-                        <span class="txt2">
-                            Ou faça login usando Facebook
-                        </span>
-                    </div>
-
-                    <div class="login100-form-social flex-c-m">
-                        <a href="#" class="login100-form-social-item flex-c-m bg1 m-r-5">
-                            <i class="fa fa-facebook-f" aria-hidden="true"></i>
-                        </a>
+                    </form>
+                    }
+                    <div class="login100-more" style="background-image: url('../../Content/StyleLogin/images/bg-01.jpg')">
 
                     </div>
-                </form>
-
-                <div class="login100-more" style="background-image: url('../../Content/StyleLogin/images/bg-01.jpg');
-
                 </div>
-            </div>
         </div>
     </div>
 
@@ -112,7 +117,7 @@
 
 
     <!--===============================================================================================-->
-    <script src="~/Content/StyleLogin/vendor/jquery/jquery-3.2.1.min.js"></script>
+    
     <!--===============================================================================================-->
     <script src="~/Content/StyleLogin/vendor/animsition/js/animsition.min.js"></script>
     <!--===============================================================================================-->
@@ -128,5 +133,33 @@
     <!--===============================================================================================-->
     <script src="~/Content/StyleLogin/js/main.js"></script>
 
+    <script src="~/Content/alertify/alertify.js"></script>
+    <script src="~/Content/alertify/alertify.min.js"></script>
+    <script type="text/javascript">
+
+        $(document).ready(function () {
+            $(function () {
+                configureModal();
+                
+                var status = "@ViewBag.Status";
+
+                if (status != "") {
+                    if (status != "False") {
+                        alertify.success("Usuário logado");
+                    } else {
+                        alertify.error("Usuário não logado");
+                    }
+                }
+
+            });
+
+
+        });
+
+        function configureModal() {
+            alertify.confirm().setHeader("Atenção");
+            alertify.alert().setHeader("Atenção");;
+        }
+    </script>
 </body>
 </html>
