Página Quem somos e Cadastro
Att estilo da página cadastro
Adicionado pagina Quem Somos

--- a/MercadOn/MercadOn/Views/Home/QuemSomos.cshtml
+++ b/MercadOn/MercadOn/Views/Home/QuemSomos.cshtml
@@ -1,18 +1,144 @@
 ﻿
 @{
-    //Layout = null;
+    Layout = null;
 }
 
 <!DOCTYPE html>
-
 <html>
+
 <head>
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.MeuBago</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Quem somos - MercadON</title>
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Catamaran:100,200,300,400,500,600,700,800,900">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/fonts/ionicons.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,700">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Feature-Section-MD.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Featured-Section.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Features-Blue.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Footer-Basic.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Lightbox-Gallery.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Team-1-1.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Team-1.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Team-Grid.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Team-Presentation---2-Persons---Social-Media-Icon.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Team-with-rotating-cards.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Team.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Tricky-Grid---2-Column-on-Desktop--Tablet-Flip-Order-of-12-Column-rows-on-Mobile.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Pricing-Tables-Item-Featured.css">
+    <link rel="stylesheet" href="https://daneden.github.io/animate.css/animate.min.css">
+    <link rel="stylesheet" href="~/Content/StyleQuemSomos/assets/css/Pricing-Tables-Item-Featured-1.css">
 </head>
-<body>
-    <div>
-        <span>@ViewBag.MeuBago</span>
+
+<body style="margin-top: 5px;">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark navbar-custom">
+        <div class="container">
+            <a class="navbar-brand" href="#"><img src="~/Content/StyleQuemSomos/assets/img/Mercadon.png" width="300"></a><button data-toggle="collapse" class="navbar-toggler" data-target="#navbarResponsive"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse"
+                 id="navbarResponsive">
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">cRIAR CONTA</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Fazer LogIn</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- Start: Team-1 -->
+    <div id="team" style="margin-top: 109px;padding-top: 5px;padding-bottom: 41px;filter: blur(0px);background-image: url(&quot;~/Content/StyleQuemSomos/assets/img/7546.jpg&quot;);">
+        <div class="container" style="filter: blur(0px);">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2 class="text-center">Conheça as pessoas que fazem o MercadON melhorar a cada dia</h2>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 col-md-4 col-xl-3">
+                    <div class="card">
+                        <img class="rounded-circle img-fluid card-img-top w-100 d-block" src="~/Content/StyleQuemSomos/assets/img/pp.jpg">
+                        <div class="caption">
+                            <h3 class="text-center">Igor Vicentini</h3>
+                            <p class="text-center text-uppercase">Desenvolvedor</p>
+                            <p class="text-center">Estudante de Engenharia de Software na UTFPR-CP</p>
+                            <hr>
+                            <p><i class="fa fa-envelope"></i><a href="mailto:email@email">igorvicentini@mercadon.br</a></p>
+                            <hr>
+                            <p>
+                                <a href="facebook" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="twitter" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="linkedin" target="_blank"><i class="icon ion-social-linkedin"></i></a>
+                                <a href="web" target="_blank"><i class="icon ion-social-dribbble-outline"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-xl-3">
+                    <div class="card">
+                        <img class="rounded-circle img-fluid card-img-top w-100 d-block" src="~/Content/StyleQuemSomos/assets/img/jair.jpg">
+                        <div class="caption">
+                            <h3 class="text-center">Jair Brann</h3>
+                            <p class="text-center text-uppercase">Desenvolvedor</p>
+                            <p class="text-center">Estudante de Engenharia de Software na UTFPR-CP<br></p>
+                            <hr>
+                            <p><i class="fa fa-envelope"></i><a href="mailto:email@email">jairbrann@mercadon.br</a></p>
+                            <hr>
+                            <p>
+                                <a href="facebook" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="twitter" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="linkedin" target="_blank"><i class="icon ion-social-linkedin"></i></a>
+                                <a href="web" target="_blank"><i class="icon ion-social-dribbble-outline"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-xl-3">
+                    <div class="card">
+                        <img class="rounded-circle img-fluid card-img-top w-100 d-block" src="~/Content/StyleQuemSomos/assets/img/felipe.jpg">
+                        <div class="caption">
+                            <h3 class="text-center">Felipe Rocha</h3>
+                            <p class="text-center text-uppercase">desenvolvedor</p>
+                            <p class="text-center">Estudante de Engenharia de Software na UTFPR-CP<br></p>
+                            <hr>
+                            <p><i class="fa fa-envelope"></i><a href="mailto:email@email">feliperocha@mercadon.br</a></p>
+                            <hr>
+                            <p>
+                                <a href="facebook" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="twitter" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="linkedin" target="_blank"><i class="icon ion-social-linkedin"></i></a>
+                                <a href="web" target="_blank"><i class="icon ion-social-dribbble-outline"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4 col-xl-3">
+                    <div class="card">
+                        <img class="rounded-circle img-fluid card-img-top w-100 d-block" src="~/Content/StyleQuemSomos/assets/img/mateus.jpg">
+                        <div class="caption">
+                            <h3 class="text-center">Mateus Sanches</h3>
+                            <p class="text-center text-uppercase">desenvolvedor</p>
+                            <p class="text-center">Estudante de Engenharia de Software na UTFPR-CP<br></p>
+                            <hr>
+                            <p><i class="fa fa-envelope"></i><a href="mailto:email@email">mateussanches@mercadon.br</a></p>
+                            <hr>
+                            <p>
+                                <a href="facebook" target="_blank"><i class="icon ion-social-facebook"></i></a><a href="twitter" target="_blank"><i class="icon ion-social-twitter"></i></a><a href="linkedin" target="_blank"><i class="icon ion-social-linkedin"></i></a>
+                                <a href="web" target="_blank"><i class="icon ion-social-dribbble-outline"></i></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+    <!-- End: Team-1 -->
+    <footer class="py-5 bg-black">
+        <div class="container">
+            <p class="text-center text-white m-0 small">Copyright&nbsp;© MercadON 2019</p>
+        </div>
+    </footer>
+    <script src="~/Content/StyleQuemSomos/assets/js/jquery.min.js"></script>
+    <script src="~/Content/StyleQuemSomos/assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+    <script src="~/Content/StyleQuemSomos/assets/js/Pricing-Tables-Item-Featured-1.js"></script>
+    <script src="~/Content/StyleQuemSomos/assets/js/Pricing-Tables-Item-Featured.js"></script>
 </body>
+
 </html>
