--- a/MercadOn/MercadOn/Views/Home/Index.cshtml
+++ b/MercadOn/MercadOn/Views/Home/Index.cshtml
@@ -43,19 +43,18 @@
 
     </header>
 
-    <section>
+     <section>
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
-                        <img class="rounded-circle img-fluid" src="~/Content/Style Pagina inicial/assets/img/238.jpg" />
+                        <img class="rounded-circle img-fluid" src="~/Content/Style Pagina inicial/assets/img/2.jpg" />
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
-                        <h2 class="display-4">Sem sair de casa...</h2>
+                        <h2 class="display-4">Sem sair de casa.</h2>
                         <p>Com o MercadON você tem a comodidade de ir ao mercado sem sair de casa.</p>
-
                     </div>
                 </div>
             </div>
@@ -65,33 +64,20 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-1">
-                    <div class="p-5"><img class="rounded-circle img-fluid" src="~/Content/Style Pagina inicial/assets/img/02.jpg"></div>
-                </div>
-                <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
-                        <h2 class="display-4">We salute you!</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
                         <img class="rounded-circle img-fluid" src="~/Content/Style Pagina inicial/assets/img/238.jpg" />
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
-                    <div class="p-5"><img class="rounded-circle img-fluid" src="~/Content/Style Pagina inicial//assets/img/03.jpg"></div>
-                </div>
-                <div class="col-lg-6 order-lg-1">
                     <div class="p-5">
                         <h2 class="display-4">Pague com facilidade.</h2>
-                        <p>No mercadON você tem a facilidade de pagar da maneira que desejar.</p>
+                        <p> No mercadON você tem a facilidade de pagar da maneira que desejar.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <footer class="py-5 bg-black">
         <div class="container">
             <p class="text-center text-white m-0 small">Copyright&nbsp;© MercadON 2019</p>
