--- a/MercadOn/MercadOn/Views/Mercado/Mercados.cshtml
+++ b/MercadOn/MercadOn/Views/Mercado/Mercados.cshtml
@@ -12,7 +12,7 @@
                         {
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="card h-100">
-                                    <a href="/MercadoProduto/MercadoProduto"><img class="card-img-top" src="@mercado.Url" alt=""></a>
+                                    <a href="/MercadoProduto/MercadoProduto?idMercado=@mercado.mercadoid"><img class="card-img-top" src="@mercado.Url" alt=""></a>
                                     <div class="card-body">
                                         <h4 class="card-title">
                                             <a href="/MercadoProduto/MercadoProduto">@mercado.NomeMercado</a>
