--- a/MercadOn/MercadOn/Views/MercadoProduto/MercadoProduto.cshtml
+++ b/MercadOn/MercadOn/Views/MercadoProduto/MercadoProduto.cshtml
@@ -1,4 +1,5 @@
-﻿@{ 
+﻿@model MercadOn.Models.Mercado.MercadoProdutoModel
+@{ 
     Layout = null;
 }
 
@@ -63,8 +64,10 @@
                 <h6 class="my-4">Você está comprando em</h6>
 
                 <div id="Logo"
+                     @Html.HiddenFor(x => x.idCliente)
+                     @Html.HiddenFor(x => x.idMercado)
             <span><img src="~/Content/StyleLogin/images/5a0c72729642de34b6b65ce7 (1).png" height="200px" /></span>
-                @Html.ActionLink("Criar pedido", "Pedido", "Mercado", new { mercadoid=1, clienteid=2 }, "")
+                @Html.ActionLink("Criar pedido", "Pedido", "Mercado", new { mercadoid=Model.idMercado, clienteid = Model.idCliente }, "")
              </div>
                 <h1 class="my-4">Categorias</h1>
                 <div class="list-group">
@@ -111,22 +114,25 @@
                 </div>
 
                 <div class="row">
+                    @foreach (var produto in Model.Produtos)
+                    {
+                        <div class="col-lg-4 col-md-6 mb-4">
+                            <div class="card h-100">
+                                <a href="#"><img class="card-img-top" src="@produto.url" alt=""></a>
+                                <div class="card-body">
+                                    <h4 class="card-title">
+                                        <a href="#">@produto.nome</a>
+                                    </h4>
+                                    <h5>R$@produto.preco</h5>
+                                    <p class="card-text">@produto.descricao</p>
+                                </div>
 
-                    <div class="col-lg-4 col-md-6 mb-4">
-                        <div class="card h-100">
-                            <a href="#"><img class="card-img-top" src="~/Content/StylePaginaProdutos/imgsprodutos/5b58246ccb412-failed-products-innovations-technology-5b471e962fbd1__700.jpg" alt=""></a>
-                            <div class="card-body">
-                                <h4 class="card-title">
-                                    <a href="#">Salgadinhos</a>
-                                </h4>
-                                <h5>R$6.99</h5>
-                                <p class="card-text">Salgadinhos diversos, doritos, lays e ruffles.</p>
                             </div>
-
                         </div>
-                    </div>
+                    }
 
-                    <div class="col-lg-4 col-md-6 mb-4">
+
+                    @*<div class="col-lg-4 col-md-6 mb-4">
                         <div class="card h-100">
                             <a href="#"><img class="card-img-top" src="~/Content/StylePaginaProdutos/imgsprodutos/CCola.jpg" alt=""></a>
                             <div class="card-body">
@@ -194,7 +200,7 @@
                             </div>
 
                         </div>
-                    </div>
+                    </div>*@
 
                 </div>
                 <!-- /.row -->
